--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,13 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.0.13-beta</version>
         </dependency>
     </dependencies>
 
